fix z-index

--- a/group/groupStyle.css
+++ b/group/groupStyle.css
@@ -223,7 +223,7 @@ h1{
 
 #bToad{
   width: 20%;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   transform: translate(-40%, -80%);
 }
